[gd_scene load_steps=4 format=3 uid="uid://dr3g7ocjrnjx7"]

[ext_resource type="Texture2D" uid="uid://cg151v66245ns" path="res://icon.svg" id="1_pilli"]
[ext_resource type="Script" path="res://Jugador.gd" id="1_qy0ph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8abqt"]
size = Vector2(1084, 876)

[node name="Escena" type="Node2D" groups=["Jugador"]]
position = Vector2(679, 96)
script = ExtResource("1_qy0ph")

[node name="Jugador" type="CharacterBody2D" parent="."]
collision_layer = 2

[node name="Sprite" type="Sprite2D" parent="Jugador"]
position = Vector2(1047, -758)
texture = ExtResource("1_pilli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jugador"]
position = Vector2(120, 74)
shape = SubResource("RectangleShape2D_8abqt")

[node name="Ruta" type="Node2D" parent="."]

[node name="Punto1" type="Node2D" parent="Ruta"]
position = Vector2(-572, -524)

[node name="Punto2" type="Node2D" parent="Ruta"]
position = Vector2(-604, 668)

[node name="Punto3" type="Node2D" parent="Ruta"]
position = Vector2(852, 692)

[node name="Punto4" type="Node2D" parent="Ruta"]
position = Vector2(924, -424)
